take back online

--- a/front/src/models/board/board.component.css
+++ b/front/src/models/board/board.component.css
@@ -46,6 +46,10 @@
   .capture-cell{
     background-color: rgb(232, 54, 54);
   }
+
+  .selected-cell{
+    background-color: blueviolet;
+  }
   
   .row-label {
     font-size: 24px;
