--- a/front/src/app/components/dialog/dialog.component.css
+++ b/front/src/app/components/dialog/dialog.component.css
@@ -1,6 +1,6 @@
 .dialog-box{
-    width: 400px;
-    height: 200px;
+    min-width: 400px;
+    min-height: 200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -21,4 +21,10 @@
     height: 50px;
     font-size: 20px;
     margin-right: 15px;
+}
+
+.promotion-options img{
+    width: 150px;
+    cursor: pointer;
+
 }
